# darknet_aman

darknet_ros/: README.md
darknet_ros/darknet/: create_datasets.py
darknet_ros/darknet/cfg/: traffic_duckie-multi.data
darknet_ros/darknet/data/: traffic_duckie-multi.names
darknet_ros/darknet/test/data_folder/: train.txt  valid.txt
darknet_ros/darknet/test/data_folder/testset/: frame0010.txt  frame0014.txt  frame0024.txt  frame0077.txt  frame0083.txt  frame0159.txt  frame0290.txt  frame0296.txt  frame0312.txt  frame0360.txt
darknet_ros/darknet/test/data_folder/trainset/: frame0000.txt  frame0001.txt  frame0002.txt  frame0004.txt  frame0005.txt  frame0006.txt  frame0009.txt  frame0015.txt  frame0018.txt  frame0019.txt  frame0020.txt  frame0022.txt  frame0023.txt  frame0025.txt  frame0027.txt  frame0028.txt  frame0035.txt  frame0036.txt  frame0038.txt  frame0039.txt  frame0041.txt  frame0044.txt  frame0045.txt  frame0047.txt  (+130 more)
darknet_ros/darknet_ros/config/: ros.yaml  traffic_yolo.yaml  yolov3-tiny-duckie.yaml
darknet_ros/darknet_ros/launch/: darknet_ros.launch  traffic_yolo_detection.launch  yolo_v3.launch  yolo_v3_tiny.launch  yolo_v3_tiny_duckie.launch
darknet_ros/darknet_ros/yolo_network_config/cfg/: traffic_duckie-multi.data  yolov3-tiny-duckie.cfg
darknet_ros/my_image_publisher/: CMakeLists.txt  package.xml
darknet_ros/my_image_publisher/nodes/: image_publisher.py
duckiebot_lane_following/: CMakeLists.txt  package.xml  setup.py
duckiebot_lane_following/src/duckiebot_lane_following/: functions.py  lane_follower.py  particle_filter.py  test.py
(+157 files in other folders)
