<package format="2">

    <name>duckiebot_lane_following</name>
    <version>0.0.1</version>
    <description>Lane following for Duckiebot</description>
    <maintainer email="brenton.leighton@uts.edu.au">Brenton Leighton</maintainer>
    <license>BSD-3-Clause</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>smach</exec_depend>
    <exec_depend>smach_ros</exec_depend>
    <exec_depend>std_msgs</exec_depend>

</package>
